# MT-SE4AI-Safe-RL-Cobraflex

./: .gitignore  LICENSE  README.md  TRACEABILITY.md  pytest.ini  requirements.txt
.claude/: settings.local.json
cage/: README.md  __init__.py  cage.yaml  cage_node.py  logger.py
cage/ros2/: README.md  __init__.py  m1_lidar_noise_logger.py  m2_latency_logger.py
cage/rules/: __init__.py  base.py  c01_lane_boundary.py  c02_heading_limit.py  (+4 more)
docs/: 00_odd_specification.md  00_v_model_adapted.md  01_id_conventions.md  02_hazard_register.md  03_safety_requirements.md  04_cage_specification.md  05_scenario_library.md  06_metrics_catalogue.md  07_traceability_matrix.md  08_change_log.md  08_odd_specification.md  08_odd_specification.md.bak  08_v_model_adapted.md  09_change_log.md  CHANGELOG.md  DECISIONS.md
experiments/: README.md
manuscript/: README.md
policy/: README.md  __init__.py  baseline_pd.py  baseline_pd.yaml  train.py
scenarios/: README.md  _schema.yaml
scripts/: download_meshes.sh
src/cobraflex_rl/: package.xml  setup.cfg  setup.py
src/cobraflex_rl/cobraflex_rl/: __init__.py  eval_policy.py  gazebo_lane_env.py  polyline_tracker.py  rewards.py  ros_interface.py  train_ppo.py
src/cobraflex_rl/config/: centerline.yaml  train_ppo.yaml
src/cobraflex_rl/launch/: train_lane.launch.py
src/cobraflex_rl/resource/: cobraflex_rl
tools/: README.md  README_sync_hazard_register.md  apply_calibration.py  check_traceability.py  close_odd_tbds.py  sync_hazard_register.py  sync_safety_requirements.py  traceability_matrix.csv  update_traceability.sh
(+103 files in other folders)
